Updated deploy instructions, fixed screen zoom on mobile

--- a/src/components/SearchResult/SearchResult.scss
+++ b/src/components/SearchResult/SearchResult.scss
@@ -16,14 +16,15 @@
 }
 
 .ais-InstantSearch__root .container {
-	overflow: hidden;
+	overflow: hidden !important;
 }
 
 .ais-SearchBox__root {
 	display: block;
+	font-size: 16px;
 	margin-top: 0;
 	margin-bottom: 60px;
 	margin-left: auto;
 	margin-right: auto;
-	max-width: 210px;
+	max-width: 228px;
 }
