--- a/src/index.scss
+++ b/src/index.scss
@@ -3,4 +3,8 @@ body {
 	overflow: hidden;
 	padding: 0;
 	font-family: sans-serif;
+
+	input[type='text'], textarea {
+		font-size: 16px;
+	}
 }
